[gd_scene load_steps=21 format=3 uid="uid://bjuajrjdbccod"]

[ext_resource type="Script" path="res://game.gd" id="1_dfy8r"]
[ext_resource type="PackedScene" uid="uid://dcsmkol37yt11" path="res://rosa.tscn" id="2_1lsgy"]
[ext_resource type="Texture2D" uid="uid://dw2a7xmb6ewsw" path="res://Assets/Temporary Test Map.png" id="2_81jpr"]
[ext_resource type="PackedScene" uid="uid://um84j24w5mft" path="res://full_heal.tscn" id="4_ui74b"]
[ext_resource type="PackedScene" uid="uid://bktvrkdc3j1v5" path="res://pac_man.tscn" id="5_f42s0"]
[ext_resource type="PackedScene" uid="uid://ci260tn4aaoif" path="res://speed_boost.tscn" id="6_kg8n5"]

[sub_resource type="Gradient" id="Gradient_heh77"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_efphf"]
gradient = SubResource("Gradient_heh77")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_73ec7"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_qhivg"]

[sub_resource type="Gradient" id="Gradient_fp6y1"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_y2edy"]
gradient = SubResource("Gradient_fp6y1")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_cotcy"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_t5lle"]

[sub_resource type="Gradient" id="Gradient_x573n"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_cbpfg"]
gradient = SubResource("Gradient_x573n")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_rof08"]

[sub_resource type="Gradient" id="Gradient_7i7ox"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_np7n6"]
gradient = SubResource("Gradient_7i7ox")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_o753c"]

[node name="Game" type="Node2D"]
script = ExtResource("1_dfy8r")

[node name="MystMaps" type="Node2D" parent="."]

[node name="AreaMain" type="Sprite2D" parent="MystMaps"]
texture = ExtResource("2_81jpr")

[node name="Area1" type="Sprite2D" parent="MystMaps"]
position = Vector2(-1900, 0)

[node name="Area2" type="Sprite2D" parent="MystMaps"]
position = Vector2(0, 1440)

[node name="Area3" type="Sprite2D" parent="MystMaps"]
position = Vector2(1900, 0)

[node name="NorthWall" type="Sprite2D" parent="." groups=["Solid", "Wall"]]
position = Vector2(0, -720)
rotation = 3.14159
texture = SubResource("GradientTexture1D_efphf")

[node name="Area2D" type="Area2D" parent="NorthWall" groups=["Hitbox"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthWall/Area2D"]
shape = SubResource("WorldBoundaryShape2D_73ec7")

[node name="StaticBody2D" type="StaticBody2D" parent="NorthWall/Area2D"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthWall/Area2D/StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_qhivg")

[node name="EastWall" type="Sprite2D" parent="." groups=["Solid", "Wall"]]
position = Vector2(2850, 0)
rotation = -1.5708
texture = SubResource("GradientTexture1D_y2edy")

[node name="Area2D" type="Area2D" parent="EastWall" groups=["Hitbox"]]
position = Vector2(2850, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="EastWall/Area2D"]
position = Vector2(2850, 0)
shape = SubResource("WorldBoundaryShape2D_cotcy")

[node name="StaticBody2D" type="StaticBody2D" parent="EastWall/Area2D"]
position = Vector2(2850, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="EastWall/Area2D/StaticBody2D"]
position = Vector2(2850, 0)
shape = SubResource("WorldBoundaryShape2D_t5lle")

[node name="SouthWall" type="Sprite2D" parent="." groups=["Solid", "Wall"]]
position = Vector2(0, 2190)
texture = SubResource("GradientTexture1D_cbpfg")

[node name="Area2D" type="Area2D" parent="SouthWall" groups=["Hitbox"]]
position = Vector2(0, 2190)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthWall/Area2D"]
position = Vector2(0, 2190)
shape = SubResource("WorldBoundaryShape2D_cotcy")

[node name="StaticBody2D" type="StaticBody2D" parent="SouthWall/Area2D"]
position = Vector2(0, 2190)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthWall/Area2D/StaticBody2D"]
position = Vector2(0, 2190)
shape = SubResource("WorldBoundaryShape2D_rof08")

[node name="WestWall" type="Sprite2D" parent="." groups=["Solid", "Wall"]]
position = Vector2(-2850, 0)
rotation = 1.5708
texture = SubResource("GradientTexture1D_np7n6")

[node name="Area2D" type="Area2D" parent="WestWall" groups=["Hitbox"]]
position = Vector2(-2850, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WestWall/Area2D"]
position = Vector2(-2850, 0)
shape = SubResource("WorldBoundaryShape2D_cotcy")

[node name="StaticBody2D" type="StaticBody2D" parent="WestWall/Area2D"]
position = Vector2(-2850, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WestWall/Area2D/StaticBody2D"]
position = Vector2(-2850, 0)
shape = SubResource("WorldBoundaryShape2D_o753c")

[node name="Rosa" parent="." instance=ExtResource("2_1lsgy")]
position = Vector2(0.500488, 0.500305)

[node name="WarriorSpawn" type="Button" parent="Rosa"]
z_index = 4096
offset_left = -624.0
offset_top = 208.0
offset_right = -556.0
offset_bottom = 239.0
text = "Warrior"
metadata/_edit_use_anchors_ = true

[node name="ArcherSpawn" type="Button" parent="Rosa"]
z_index = 4096
offset_left = -624.0
offset_top = 240.0
offset_right = -564.0
offset_bottom = 271.0
text = "Archer
"
metadata/_edit_use_anchors_ = true

[node name="PyroSpawn" type="Button" parent="Rosa"]
z_index = 4096
offset_left = -624.0
offset_top = 272.0
offset_right = -522.0
offset_bottom = 303.0
text = "Pyromancer"
metadata/_edit_use_anchors_ = true

[node name="KnightSpawn" type="Button" parent="Rosa"]
z_index = 4096
offset_left = -624.0
offset_top = 304.0
offset_right = -565.0
offset_bottom = 335.0
text = "Knight"
metadata/_edit_use_anchors_ = true

[node name="FullHeal" parent="." instance=ExtResource("4_ui74b")]
position = Vector2(0, 232)

[node name="PacMan" parent="." instance=ExtResource("5_f42s0")]
position = Vector2(-599.5, 0.500305)

[node name="SpeedBoost" parent="." instance=ExtResource("6_kg8n5")]
position = Vector2(600.5, 0.500305)

[connection signal="pressed" from="Rosa/WarriorSpawn" to="." method="_on_warrior_spawn_pressed"]
[connection signal="pressed" from="Rosa/ArcherSpawn" to="." method="_on_archer_spawn_pressed"]
[connection signal="pressed" from="Rosa/PyroSpawn" to="." method="_on_pyro_spawn_pressed"]
[connection signal="pressed" from="Rosa/KnightSpawn" to="." method="_on_knight_spawn_pressed"]
